# freecell-rs

./: Cargo.toml  README.md
src/: freecell.rs  freecell_game.rs  game.rs  lib.rs  main.rs
