[package]
name = "freecell"
version = "0.1.0"
authors = ["Murarth <murarth@gmail.com>"]

[[bin]]
name = "freecell"
path = "src/main.rs"
doc = false
test = false

[lib]
name = "freecell"
path = "src/lib.rs"

[dependencies]
rand = "0.3"
rustbox = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
