[package]
name = "freecell"
version = "0.1.0"
authors = ["Murarth <murarth@gmail.com>"]

[[bin]]
name = "freecell"
path = "src/main.rs"
doc = false
test = false

[lib]
name = "freecell"
path = "src/lib.rs"

[dependencies]
mortal = "0.1.3"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
