[package]
name = "freecell"
version = "0.1.0"
edition = "2018"
authors = ["Murarth <murarth@gmail.com>"]

[[bin]]
name = "freecell"
path = "src/main.rs"
doc = false
test = false

[lib]
name = "freecell"
path = "src/lib.rs"

[dependencies]
dirs = "2.0"
mortal = "0.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_game = { path = "../term_game" }
